--- a/www.strong.io/index.html
+++ b/www.strong.io/index.html
@@ -5,7 +5,7 @@
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
         <meta charset="utf-8">
-        <title>CLP Big Data Team</title>
+        <title>CLP Big Data & AI Team</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="keywords" content="data science consulting, machine learning development, big data consulting, data scientists chicago, data scientists vancouver, machine learning chicago, machine learning vancouver, predictive models">
         <meta name="description" content="We are a data science consulting and machine learning development firm that works with organizations of all sizes.">
@@ -45,7 +45,7 @@
                     <div class="row">
                         <div class="col-xs-6 col-sm-6">
                             <a href="index.html">
-                                <img class="logo" alt="logo" src="img/clp-logo.png" alt="CLP Big Data Team" title="CLP Big Data Team"/>
+                                <img class="logo" alt="logo" src="img/clp-logo.png" alt="CLP Big Data & AI Team" title="CLP Big Data & AI Team"/>
                             </a>
                         </div>
                         <div class="col-xs-6 col-sm-6 text-right">
@@ -65,7 +65,7 @@
                         <div class="col-md-3 col-sm-2 hidden-xs">
                             <div class="bar__module">
                                 <a href="index.html">
-                                    <img class="logo" alt="logo" src="img/clp-logo.png" alt="CLP Big Data Team" title="CLP Big Data Team"/>
+                                    <img class="logo" alt="logo" src="img/clp-logo.png" alt="CLP Big Data & AI Team" title="CLP Big Data & AI Team"/>
                                 </a>
                             </div>
                             <!--end module-->
@@ -112,7 +112,7 @@
                     <div class="row">
                         <div class="col-sm-11 col-md-8">
                             <span class="h2">
-                                We are the <span style="font-weight: 700; color: #0b3d90">CLP Big Data Team</span>, under the Department of Innovation.
+                                <span style="font-weight: 700"> We are the <span style="font-weight: 700; color: #0b3d90">CLP Big Data & AI Team</span>, under the Department of Innovation. </span>
                             </span>
                             <div>
                                <a class="btn btn--primary type--uppercase" href="projects.html">
@@ -152,7 +152,7 @@
                         <div class="col-sm-4">
                             <div class="feature feature-3 boxed boxed--lg boxed--border text-center">
                                 <i class="icon icon--lg icon-Brain"></i>
-                                <h4><span style="font-weight: 700; color: #0b3d90">Machine Learning Development</span></h4>
+                                <h4><span style="font-weight: 700; color: #0b3d90">AI Algorithms Design & Development</span></h4>
                                 <p>
                                     We can help you design and implement custom machine learning solutions to make your products smarter.
                                 </p>
@@ -171,7 +171,7 @@
                         <div class="col-sm-4">
                             <div class="feature feature-3 boxed boxed--lg boxed--border text-center">
                                 <i class="icon icon--lg icon-Bar-Chart4"></i>
-                                <h4><span style="font-weight: 700; color: #0b3d90"> Data Science &amp; Analytics</span></h4>
+                                <h4><span style="font-weight: 700; color: #0b3d90"> Creating AI Products for Power Utilities</span></h4>
                                 <p>
                                     Leverage your data to tackle your most challenging problems with structured or unstructured data, big and small.
                                 </p>
@@ -186,9 +186,9 @@
                         <div class="col-sm-4">
                             <div class="feature feature-3 boxed boxed--lg boxed--border text-center">
                                 <i class="icon icon--lg icon-Server"></i>
-                                <h4><span style="font-weight: 700; color: #0b3d90">Big Data Infrastructure</span></h4>
+                                <h4><span style="font-weight: 700; color: #0b3d90">Big Data Infrastructure & Architecture</span></h4>
                                 <p>
-                                    Implement data processing pipelines, streaming analytics, and data warehouses to process, analyze, and protect your data.
+                                    Comprehensive big data infrastructure to support processing pipelines for analytics, and data warehouses to utilize your data.
                                 </p>
                                 <!--
                                 <a href="big-data-infrastructure.html">
@@ -196,8 +196,15 @@
                                 </a>
                                 -->
                             </div>
+
                             <!--end feature-->
                         </div>
+
+                                <a class="btn btn--primary type--uppercase" href="projects.html">
+                                    <span class="btn__text">
+                                        Explore our projects
+                                    </span>
+                                </a>
                     </div>
                     <!--end of row-->
                 </div>
@@ -331,10 +338,10 @@
                     <div class="row">
                         <div class="col-sm-12 col-md-12">
                             <div class="cta">
-                                <h2>Work with <span style="font-weight: 700; color: #0b3d90">CLP Big Data Team</span> on your next <br/> data science and analytics project.</h2>
+                                <h2>Work with <span style="font-weight: 700; color: #0b3d90">CLP Big Data & AI Team</span> on your next <br/> data science and analytics project.</h2>
                                 <a class="btn btn--primary type--uppercase" href="mailto:bigdatateam@clp.com.hk">
                                     <span class="btn__text">
-                                        Contact Us for an initiation meeting
+                                        Contact us for an initiation meeting
                                     </span>
                                 </a>
                             </div>
@@ -356,11 +363,13 @@
                                         <span class="h6 type--uppercase">Our Team</span>
                                     </a>
                                 </li>
+                                <!--
                                 <li>
                                     <a href="careers.html">
                                         <span class="h6 type--uppercase">Careers</span>
                                     </a>
                                 </li>
+                                -->
                                 <li>
                                     <a href="mailto:bigdatateam@clp.com.hk">
                                         <span class="h6 type--uppercase">Contact Us</span>
@@ -370,13 +379,16 @@
                         </div>
                         <div class="col-sm-5 text-right text-center-xs">
                             <ul class="social-list list-inline list--hover">
+                                <!--
                                 <li>
                                     <a href="http://www.twitter.com/stronganalytics">
                                         <i class="socicon socicon-twitter icon icon--xs"></i>
                                     </a>
+
                                 </li>
+                                -->
                                 <li>
-                                    <a href="https://www.linkedin.com/company/strong-analytics">
+                                    <a href="https://www.linkedin.com/company/clp-power-hong-kong-ltd/">
                                         <i class="socicon socicon-linkedin icon icon--xs"></i>
                                     </a>
                                 </li>
@@ -387,7 +399,7 @@
                     <div class="row">
                         <div class="col-sm-7">
                             <span class="type--fine-print">&copy;
-                                <span class="update-year"></span> CLP Big Data Team, Innovation &mdash; Hong Kong</span>
+                                <span class="update-year"></span> CLP Big Data & AI Team Innovation &mdash; Hong Kong</span>
                         </div>
                         <div class="col-sm-5 text-right text-center-xs">
                             <a class="type--fine-print" href="mailto:bigdatateam@clp.com.hk">bigdatateam@clp.com.hk</a>
