--- a/www.strong.io/projects.html
+++ b/www.strong.io/projects.html
@@ -5,7 +5,7 @@
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
         <meta charset="utf-8">
-        <title>Projects - CLP Big Data Team</title>
+        <title>Projects - CLP Big Data & AI Team</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="keywords" content="data science consulting, machine learning development, big data consulting, data scientists chicago, data scientists vancouver, machine learning chicago, machine learning vancouver, predictive models">
         <meta name="description" content="We design and implement big data strategies including data pipelines, data warehouses, and streaming analytics for organizations of all sizes.">
@@ -45,7 +45,7 @@
                     <div class="row">
                         <div class="col-xs-6 col-sm-6">
                             <a href="index.html">
-                                <img class="logo" alt="logo" src="img/clp-logo.png" alt="CLP Big Data Team" title="CLP Big Data Team"/>
+                                <img class="logo" alt="logo" src="img/clp-logo.png" alt="CLP Big Data & AI Team" title="CLP Big Data & AI Team"/>
                             </a>
                         </div>
                         <div class="col-xs-6 col-sm-6 text-right">
@@ -65,7 +65,7 @@
                         <div class="col-md-3 col-sm-2 hidden-xs">
                             <div class="bar__module">
                                 <a href="index.html">
-                                    <img class="logo" alt="logo" src="img/clp-logo.png" alt="CLP Big Data Team" title="CLP Big Data Team"/>
+                                    <img class="logo" alt="logo" src="img/clp-logo.png" alt="CLP Big Data & AI Team" title="CLP Big Data & AI Team"/>
                                 </a>
                             </div>
                             <!--end module-->
@@ -109,16 +109,16 @@
         
         <div class="main-container">
 	        
-	        			<section class="text-center">
+            <section class="text-center bg1">
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-12 col-md-12">
                             <h1><span style="font-weight:bold; color: #0b3d90">Our Projects</span></h1>
-                            <p class="lead">
-                                Our PhD-trained data scientists design, develop, and deploy machine learning tools and algorithms<br class="hidden-xs hidden-sm">
+                            <p class="lead" style="font-weight:bold">
+                                Our data scientists design, develop, and deploy machine learning tools and algorithms<br class="hidden-xs hidden-sm">
                     that make your products and operations smarter.
                             </p>
-                            <a class="btn btn--primary type--uppercase contact-landing-cta" href="contact.html">
+                            <a class="btn btn--primary type--uppercase contact-landing-cta" download="Case Study" href="img/case_study.pdf" target="_blank">
                                 <span class="btn__text">
                                     Download Case Study PDF
                                 </span>
@@ -133,11 +133,9 @@
             <section class="bg--secondary">
                 <div class="container">
                     <div class="row">
-                        <div class="text-center col-sm-12 col-md-12">
-                            <h2><span style="font-weight:bold; color: #0b3d90">Current Projects</span></h2>
-                            <br/>
-                        </div>
-                    </div>
+                            <h2 style = "text-align: center"><span style="font-weight:bold; color: #0b3d90; text-align: center">Current Projects</span></h2>
+
+
                     <div class="row">
 	                    <div class="col-sm-4">
                             <div class="feature feature-2 boxed boxed--border">
@@ -145,8 +143,8 @@
                                 <div class="feature__body">
                                     <h4><span style="font-weight:bold; color: #0b3d90">Short Term Load Forecast</span></h4>
                                     <p>
-                                        We offer custom <a href="machine-learning-consulting.html">machine learning consulting</a>
-                            that brings modern machine learning tools to you.
+                                       Daily 24 hour forecasts of energy demand at
+                                        15 minutes intervals and peak demand of the day.
                                     </p>
                                 </div>
                             </div>
@@ -173,8 +171,7 @@
                                     <h4><span style="font-weight:bold; color: #0b3d90">Low-Voltage Cable</span></h4>
 
                                     <p>
-                                        Build <a href="predictive-modeling.html">predictive models</a>
-                            that classify and quantify new events and customers based on historical data.
+                                        Predicting anomalies in low voltage 11kv cable and identifying feeders that returns zero values.
                                     </p>
                                 </div>
                             </div>
@@ -201,7 +198,7 @@
                                     <h4><span style="font-weight:bold; color: #0b3d90">Emission Prediction</span></h4>
 
                                     <p>
-                                        Use recent advances in <a href="deep-learning.html">deep learning</a> and neural networks to find structure in noisy, complex input.
+                                        Predicting emission of SO2 and CO using xgboost to better manage resources and save boiler cost
                                     </p>
                                 </div>
                             </div>
@@ -216,8 +213,7 @@
 
 
                                     <p>
-                                        Leverage <a href="reinforcement-learning.html">reinforcement learning</a> to 
-	                    	build adaptive, intelligent agents that get smarter over time.
+                                        Early detection of electric meter irregularity to save manpower cost to rectify the problem
                                     </p>
                                 </div>
                             </div>
@@ -275,7 +271,7 @@
                     <div class="row">
                         <div class="col-sm-12 col-md-12">
                             <div class="cta">
-                                <h2>Get to know the <span style="font-weight: 700; color: #0b3d90">CLP Big Data Team</span> in depth</h2>
+                                <h2>Get to know the <span style="font-weight: 700; color: #0b3d90">CLP Big Data & AI Team</span> in depth</h2>
                                 <a class="btn btn--primary type--uppercase" href="team.html">
                                     <span class="btn__text">
                                         Our Team
@@ -299,11 +295,13 @@
                                         <span class="h6 type--uppercase">Our Team</span>
                                     </a>
                                 </li>
+                                <!--
                                 <li>
                                     <a href="careers.html">
                                         <span class="h6 type--uppercase">Careers</span>
                                     </a>
                                 </li>
+                                -->
                                 <li>
                                     <a href="contact.html">
                                         <span class="h6 type--uppercase">Contact Us</span>
@@ -313,13 +311,15 @@
                         </div>
                         <div class="col-sm-5 text-right text-center-xs">
                             <ul class="social-list list-inline list--hover">
+                                <!--
                                 <li>
                                     <a href="http://www.twitter.com/stronganalytics">
                                         <i class="socicon socicon-twitter icon icon--xs"></i>
                                     </a>
                                 </li>
+                                -->
                                 <li>
-                                    <a href="https://www.linkedin.com/company/strong-analytics">
+                                    <a href="https://www.linkedin.com/company/clp-power-hong-kong-ltd/">
                                         <i class="socicon socicon-linkedin icon icon--xs"></i>
                                     </a>
                                 </li>
@@ -330,7 +330,7 @@
                     <div class="row">
                         <div class="col-sm-7">
                             <span class="type--fine-print">&copy;
-                                <span class="update-year"></span> CLP Big Data Team, Innovation &mdash; Hong Kong</span>
+                                <span class="update-year"></span> CLP Big Data & AI Team, Innovation &mdash; Hong Kong</span>
                         </div>
                         <div class="col-sm-5 text-right text-center-xs">
                             <a class="type--fine-print" href="mailto:bigdatateam@clp.com.hk">bigdatateam@clp.com.hk</a>
