--- a/www.strong.io/team.html
+++ b/www.strong.io/team.html
@@ -5,7 +5,7 @@
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
         <meta charset="utf-8">
-        <title>Our Team - CLP Big Data Team</title>
+        <title>Our Team - CLP Big Data & AI Team</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="keywords" content="data science consulting, machine learning development, big data consulting, data scientists chicago, data scientists vancouver, machine learning chicago, machine learning vancouver, predictive models">
         <meta name="description" content="We are a data science consulting and machine learning development firm that works with organizations of all sizes.">
@@ -45,7 +45,7 @@
                     <div class="row">
                         <div class="col-xs-6 col-sm-6">
                             <a href="index.html">
-                                <img class="logo" alt="logo" src="img/clp-logo.png" alt="CLP Big Data Team" title="CLP Big Data Team"/>
+                                <img class="logo" alt="logo" src="img/clp-logo.png" alt="CLP Big Data & AI Team" title="CLP Big Data & AI Team"/>
                             </a>
                         </div>
                         <div class="col-xs-6 col-sm-6 text-right">
@@ -65,7 +65,7 @@
                         <div class="col-md-3 col-sm-2 hidden-xs">
                             <div class="bar__module">
                                 <a href="index.html">
-                                    <img class="logo" alt="logo" src="img/clp-logo.png" alt="CLP Big Data Team" title="CLP Big Data Team">
+                                    <img class="logo" alt="logo" src="img/clp-logo.png" alt="CLP Big Data & AI Team" title="CLP Big Data & AI Team">
                                 </a>
                             </div>
                             <!--end module-->
@@ -108,15 +108,17 @@
         
         <div class="main-container">
 	        
-	        			<section class="text-center">
-                <div class="container pos-vertical-center">
+            <section class="text-center bg2">
+                <div class="container">
                     <div class="row">
                         <div class="col-sm-12">
                             <h1 style="font-weight:bold; color: #0b3d90">Our Team</h1>
-                            <p class="lead">
-                                Learn about how our unique combination of experience and training in
-                                <br class="hidden-xs hidden-sm">machine learning, app development, and strategy can help grow your business.
+                            <p class="lead" style="font-weight:bold">
+                                Learn about how our unique combination of experience in
+                                <br class="hidden-xs hidden-sm">machine learning, big data, and strategy can help grow your business.
                             </p>
+                        <br/>
+                            <br/>
                         </div>
                     </div>
                     <!--end of row-->
@@ -289,17 +291,22 @@
                                     <h4>Data Scientist</h4>
                                 </div>
                                 <p class="lead">
-                                    Jade holds a Ph.D in Computer Science from Aarhus University, Denmark, where she developed models and software in the field of population genetics.  She specializes in making quantitative predictions through numerical optimizations and machine learning techniques, such as hidden Markov models and structure analysis.  Prior to joining Strong, Jade worked at the Natural History Museum of Denmark in Copenhagen and the University of California, Berkeley.
+                                    Edward holds a Masters in Information Technology and Bachelors in Electronic Engineering from the Hong Kong University of Science and Technology (HKUST).
+                                    He has more than 9 years of working experience as a software engineer and data scientist. Therefore, he
+                                    is familiar with the software cycle and what the company needs. His research covers object and image recognitions,
+                                    time series forecasting, reinforcement learning, and IOT integration.
                                 </p>
                                 <ul class="social-list list-inline list--hover">
                                     <li>
-                                        <a href="mailto:jade.cheng@strong.io">
+                                        <a href="mailto:edward.kw.chan@clp.com.hk">
                                             <i class="socicon socicon-mail icon icon--xs"></i>
                                         </a>
-                                        <li>
+                                    <li>
+                                    <!--
                                         <a href="https://www.linkedin.com/in/jade-cheng/">
                                             <i class="socicon socicon-linkedin icon icon--xs"></i>
                                         </a>
+                                    -->
                                     </li>
                                     </li>
                                 </ul>
@@ -323,18 +330,28 @@
                                     <h4>Data Scientist</h4>
                                 </div>
                                 <p class="lead">
-                                    Noah attended Purdue University and the University of Illinois, where he received his M.S. in Statistics. Noah is an expert in statistical causal inference, predictive modeling, and applied optimization techniques. Before joining Strong Analytics, he worked in the pharmaceutical and insurance industries.
+
+
+                                    Alex is a graduate from the Polytechnic University of Catalonia (UPC) and received his BSc in Civil Engineering.
+                                    He will complete his MSc in Big Data in HKUST this summer. Alex is a highly motivated self-starter who likes to
+                                    leverage the use of data to help people make better decisions. He worked on forecasting daily energy demand,
+                                    outlier detection in the 11kv Grid line, and reviewed our Warehouse management flow,
+                                    identifying pain points and proposed new approaches for optimizing current process.
+
+
                                 </p>
                                 <ul class="social-list list-inline list--hover">
                                     <li>
                                         <a href="mailto:noah.salas@strong.io">
                                             <i class="socicon socicon-mail icon icon--xs"></i>
                                         </a>
-                                        <li>
+                                    <!--
+                                    <li>
                                         <a href="https://www.linkedin.com/in/noah-salas-73540670/">
                                             <i class="socicon socicon-linkedin icon icon--xs"></i>
                                         </a>
                                     </li>
+                                    -->
                                     </li>
                                 </ul>
                             </div>
@@ -357,18 +374,22 @@
                                     <h4>Data Scientist</h4>
                                 </div>
                                 <p class="lead">
-                                    Juan attended Florida State University, where he received his M.S. in Computational Science and B.S. in
-Mathematics. Juan specializes in researching and developing machine learning models, leveraging deep learning and natural language processing. Prior to joining Strong, Juan worked on text classification models for e-commerce transactions, generative models for synthetic time series generation, and 3D virtual environments for enhancing situational awareness in people with visual impairments.
+                                    Jason is a graduate from The University of Hong Kong (HKU) and received his BSc in Quantitative Finance.
+                                    He will be pursuing his MSc in Statistics and Data Analytics in HKU this fall. Prior to CLP,
+                                    Jason worked as a Data Scientist for one of the largest asset management company. He worked on
+                                    predicting MPF customer attrition, outlier fund redemption forecasting, spatial analytics and Markov Chain attribution of marketing channels.
                                 </p>
                                 <ul class="social-list list-inline list--hover">
                                     <li>
-                                        <a href="mailto:juan.llanos@strong.io">
+                                        <a href="mailto:jason.ja.chan@clp.com.hk">
                                             <i class="socicon socicon-mail icon icon--xs"></i>
                                         </a>
                                     </li>
                                     <li>
+                                        <!--
                                         <a href="https://www.linkedin.com/in/jgllanos/">
                                             <i class="socicon socicon-linkedin icon icon--xs"></i>
+                                            -->
                                         </a>
                                     </li>
                                 </ul>
@@ -455,7 +476,7 @@ Scott earned a Ph.D. in Chemical Engineering from the University of Minnesota by
                                 <h2>You've met our team. Now see what we can do for you.</h2>
                                 <a class="btn btn--primary type--uppercase" href="mailto:bigdatateam@clp.com.hk">
                                     <span class="btn__text">
-                                        Contact Us for a Free Consultation
+                                        Contact us for an initiation meeting
                                     </span>
                                 </a>
                             </div>
@@ -476,11 +497,13 @@ Scott earned a Ph.D. in Chemical Engineering from the University of Minnesota by
                                         <span class="h6 type--uppercase">Our Team</span>
                                     </a>
                                 </li>
+                                <!--
                                 <li>
                                     <a href="careers.html">
                                         <span class="h6 type--uppercase">Careers</span>
                                     </a>
                                 </li>
+                                -->
                                 <li>
                                     <a href="contact.html">
                                         <span class="h6 type--uppercase">Contact Us</span>
@@ -490,13 +513,15 @@ Scott earned a Ph.D. in Chemical Engineering from the University of Minnesota by
                         </div>
                         <div class="col-sm-5 text-right text-center-xs">
                             <ul class="social-list list-inline list--hover">
+                                <!--
                                 <li>
                                     <a href="http://www.twitter.com/stronganalytics">
                                         <i class="socicon socicon-twitter icon icon--xs"></i>
                                     </a>
                                 </li>
+                                -->
                                 <li>
-                                    <a href="https://www.linkedin.com/company/strong-analytics">
+                                    <a href="https://www.linkedin.com/company/clp-power-hong-kong-ltd/">
                                         <i class="socicon socicon-linkedin icon icon--xs"></i>
                                     </a>
                                 </li>
@@ -507,7 +532,7 @@ Scott earned a Ph.D. in Chemical Engineering from the University of Minnesota by
                     <div class="row">
                         <div class="col-sm-7">
                             <span class="type--fine-print">&copy;
-                                <span class="update-year"></span> CLP Big Data Team, Innovation &mdash; Hong Kong</span>
+                                <span class="update-year"></span> CLP Big Data & AI Team, Innovation &mdash; Hong Kong</span>
                         </div>
                         <div class="col-sm-5 text-right text-center-xs">
                             <a class="type--fine-print" href="mailto:contact@strong.io">contact@strong.io</a>
